--- a/CleanArchitectureExample.Service/CleanArchitectureExample.Service.csproj
+++ b/CleanArchitectureExample.Service/CleanArchitectureExample.Service.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Polly" Version="7.2.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CleanArchitectureExample.Application\CleanArchitectureExample.Application.csproj" />
   </ItemGroup>
 
